# production-data-analysis

./: pyproject.toml
docs/material_balance_calculations/: mbpy_tarek_exercise_11_1.py
docs/rate_transient_analysis/: horizontal_well_trajectory.csv
docs/sand_transportation/: conduit_geometry_comparison.ipynb  conduit_grid_container_demo.ipynb
docs/transient_analysis/: horizontal_well_directional_survey.csv  horizontal_well_trajectory.py
docs/well_performance_analysis/: reservoir_deliverability.ipynb
prodpy/: __init__.py  _allocation.py  _pressure.py  _rate.py  _schedule.py
prodpy/mbal/: __init__.py  _aquifer.py  _cruncher.py  _model.py  _reservoir.py  _tank.py
prodpy/onepage/: _forecast.py  _history.py
prodpy/porsim/: __init__.py  _builder.py  _cuboid.py
prodpy/resprops/: __init__.py  _fluid.py  _layer.py
prodpy/transient/: __init__.py  _base_solver.py  _buckley_leverett.py  _everdingen_2.py  _fast_marching_method.py  _inflow_performance.py  _result.py  (+11 more)
tests/: _test_wellflow_sand_transport_annular_conduit.py  test_annular_conduit.py  test_decline_curve_analysis.py  test_decline_curve_analysis_arps.py  test_decline_curve_analysis_exponential.py  test_decline_curve_analysis_harmonic.py  test_decline_curve_analysis_hyperbolic.py  test_decline_curve_analysis_schedule.py  test_porsim_constraint.py  test_porsim_cylindrical_grids.py  test_porsim_prerun_constraint.py  test_porsim_rectangular_grid_base.py  test_porsim_rectangular_grids.py  test_reservoir_properties_fluid_state.py  test_reservoir_properties_layer_state.py  test_reservoir_properties_relative_permeability.py  test_reservoir_properties_relative_permeability_interpolator.py  test_transient_flow_porous_media.py  test_wellflow_sand_transport_annular_conduit.py  test_wellflow_sand_transport_circular_conduit.py
(+66 files in other folders)
